# frog_cross

./: CMakeLists.txt  README.md  main.cpp
core/: GameColors.cpp  GameColors.h  GameConfig.cpp  GameConfig.h  GameManager.cpp  GameManager.h  GameTimer.cpp  GameTimer.h  GameUtils.cpp  GameUtils.h  Map.cpp  Map.h
data/: DataManager.cpp  DataManager.h  DataStructures.cpp  DataStructures.h  UserManagementMenu.cpp  UserManagementMenu.h
entities/: Car.cpp  Car.h  Frog.cpp  Frog.h  GameObject.cpp  GameObject.h  Moto.cpp  Moto.h  Obstacle.cpp  Obstacle.h  Vehicle.cpp  Vehicle.h
systems/: EffectSystem.cpp  EffectSystem.h  GameStats.cpp  GameStats.h  PowerUp.cpp  PowerUp.h
ui/: ConfigurationMenu.cpp  ConfigurationMenu.h
